CHANGES IN FLTK 1.3.0

	- All draw() methods of widgets are now protected (STR #2142).
	- The new configure option --enable-x11 (lowercase 'x') enables
	  cygwin builds under Windows (with --enable-cygwin) to use X11
	  instead of GDI drawing (STR #2147) and is ignored otherwise.
	- Added Fl_Scroll::bbox() documentation (STR #1893)
	- Removed an XForms compatibility "feature" that prevented the down
	  array of Fl_Menu_Button from drawing (STR #2141).
	- New class Fl_Widget_Tracker to simplify safe handling of widget
	  deletion in callbacks. This is used in Fl_Widget::do_callback()
	  to prevent accessing widgets after deletion in the callback.
	- Fl_Help_View handles HTML2 font color specification (STR #890) 
	- Copyright dates are now updated to 2009 (STR #2036)
	- Copy/Paste operations should now work as expected, 
          with utf8,16 support and fltk1.1 compatibility. (STR #2104,2121).
	- Widgets now remove themselves from their parent group (if any),
	  when destroyed (STR #1894)
	- Added flexible gap size for text buffer (STR #2046)
	- Fixed static linking of image libraries (STR #1962)
	- Fixed fl_set_spot() for Windows (STR #2101)
	- Added sorting to Fl_Browser_ (STR #2113)
	- Added utf8 support for OS X copy and paste
	- Improved handling of composed keys in OS X 10.5 and up
	- Updated the bundled libpng to v1.2.33.
	- Fixed callback would not be called when shortcut was used with
          radio and toggle buttons in default FL_RELEASE mode.
	- Fixed a problem with TrackMouseEvent() (Windows only) that would
	  generate wrong FL_LEAVE events with subwindows. TrackMouseEvent
	  is now enabled by default (it was disabled for GNU compilers).
	  It can be disabled by defining NO_TRACK_MOUSE.
	  Improved test/subwindow.cxx (STR #2079)
	- Fixed documentation (added missing COMCTRL32.LIB dependency)
	- Fixed menu position close to screen border (STR #2057)
	- Improved stability of fl_read_image (STR #2021)
	- Fixed adding an idle handler during